--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       // --- CONFIGURAÇÃO DO FIREBASE ---
       // IMPORTANTE: Substitua estas chaves pelas do seu projeto no site do Firebase!
       const firebaseConfig = {
-        apiKey: "AIzaSy...",
+        apiKey: "AIzaSyD0aw5it4FgY7TdCIUrj9cGfGp3c0au10U",
         authDomain: "seu-projeto.firebaseapp.com",
         projectId: "seu-projeto",
         storageBucket: "seu-projeto.appspot.com",
