--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
       // IMPORTANTE: Substitua estas chaves pelas do seu projeto no site do Firebase!
       const firebaseConfig = {
         apiKey: "AIzaSyD0aw5it4FgY7TdCIUrj9cGfGp3c0au10U",
-        authDomain: "seu-projeto.firebaseapp.com",
-        projectId: "seu-projeto",
-        storageBucket: "seu-projeto.appspot.com",
-        messagingSenderId: "...",
-        appId: "..."
+        authDomain: "topdelinhacaixaestoque.firebaseapp.com",
+        projectId: "topdelinhacaixaestoque",
+        storageBucket: "topdelinhacaixaestoque.firebasestorage.app",
+        messagingSenderId: "177632701767",
+        appId: "1:177632701767:web:ad38d9abb95a321d42b062"
       };
 
       // --- INICIALIZAÇÃO DO FIREBASE ---
