--- a/index.html
+++ b/index.html
@@ -200,6 +200,6 @@
         </div>
     </div>
     
-    <script src="app/main.js" type="module"></script>
-</body>
+    <script type="module" src="script.js"></script>
+      </body>
 </html>
