--- a/index.html
+++ b/index.html
@@ -200,6 +200,6 @@
         </div>
     </div>
     
-    <script src="script.js" type="module"></script>
+    <script src="app/main.js" type="module"></script>
 </body>
 </html>
