--- a/index.html
+++ b/index.html
@@ -64,7 +64,51 @@
         <main class="flex-grow overflow-y-auto">
             <div class="p-4 sm:p-6 md:p-8">
                 <div id="content-dashboard" class="tab-content"></div>
-                <div id="content-cash-register" class="tab-content hidden"></div>
+                <div id="content-cash-register" class="tab-content hidden">
+                    <div id="cash-register-closed-state" class="text-center py-12 hidden">
+                         <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="mx-auto text-red-500"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 9.9-1"></path></svg>
+                        <h2 class="mt-4 text-2xl font-bold text-gray-800">Caixa Fechado</h2>
+                        <form id="open-day-form" class="mt-6 max-w-sm mx-auto space-y-4">
+                            <div>
+                                <label for="initial-cash" class="block text-sm font-medium text-gray-700">Valor Inicial (Fundo de Troco do Dia)</label>
+                                <input type="number" id="initial-cash" placeholder="Ex: 100.00" step="0.01" min="0" required class="mt-1 block w-full p-2 border rounded-md shadow-sm">
+                            </div>
+                            <div>
+                                <label for="opening-user" class="block text-sm font-medium text-gray-700">Operador do 1º Turno</label>
+                                <select id="opening-user" required class="mt-1 block w-full p-2 border rounded-md shadow-sm"></select>
+                            </div>
+                            <button type="submit" class="w-full bg-green-600 text-white font-bold py-3 px-8 rounded-lg">Abrir Caixa (Iniciar Dia)</button>
+                        </form>
+                    </div>
+                    <div id="cash-register-active-shift-state" class="text-center py-12 hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="mx-auto text-green-500"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 5-5 5 5 0 0 1 5 5v4"></path></svg>
+                        <h2 class="mt-4 text-2xl font-bold text-gray-800">Turno Ativo</h2>
+                        <div class="mt-4 text-gray-600 space-y-2">
+                            <p>Início do Turno: <span id="session-start-time" class="font-semibold"></span></p>
+                            <p>Operador do Turno: <span id="session-opened-by" class="font-semibold"></span></p>
+                        </div>
+                        <div class="mt-8 max-w-sm mx-auto">
+                             <label for="closing-user" class="block text-sm font-medium text-gray-700">Operador de Fechamento</label>
+                             <select id="closing-user" required class="mt-1 block w-full p-2 border rounded-md shadow-sm"></select>
+                             <button id="close-shift-button" class="mt-4 w-full bg-yellow-500 text-white font-bold py-3 px-8 rounded-lg">Fechar Turno</button>
+                        </div>
+                    </div>
+                    <div id="cash-register-waiting-shift-state" class="text-center py-12 hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="mx-auto text-blue-500"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"></path><path d="M12 6v6l4 2"></path></svg>
+                        <h2 class="mt-4 text-2xl font-bold text-gray-800">Dia em Operação (Aguardando Turno)</h2>
+                        <div class="mt-6 max-w-sm mx-auto space-y-4">
+                            <form id="open-shift-form" class="space-y-4 p-4 border rounded-lg">
+                                 <h3 class="font-semibold">Iniciar Próximo Turno</h3>
+                                 <div>
+                                    <label for="next-opening-user" class="block text-sm font-medium text-gray-700">Operador</label>
+                                    <select id="next-opening-user" required class="mt-1 block w-full p-2 border rounded-md shadow-sm"></select>
+                                 </div>
+                                 <button type="submit" class="w-full bg-green-600 text-white font-bold py-3 px-8 rounded-lg">Abrir Novo Turno</button>
+                            </form>
+                            <button id="close-day-button" class="w-full bg-red-600 text-white font-bold py-3 px-8 rounded-lg">Fechar Dia e Gerar Relatório Final</button>
+                        </div>
+                    </div>
+                </div>
                 <div id="content-pdv" class="tab-content hidden"></div>
                 <div id="content-inventory" class="tab-content hidden"></div>
                 <div id="content-customers" class="tab-content hidden"></div>
