--- a/index.html
+++ b/index.html
@@ -9,7 +9,39 @@
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css">
-</head>
+    <style>
+        @media print {
+            body * {
+                visibility: hidden;
+            }
+            #receipt-modal, #receipt-modal * {
+                visibility: visible;
+            }
+            #receipt-modal {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: flex-start;
+                justify-content: center;
+                background-color: white;
+                padding: 0;
+            }
+            #receipt-content {
+                width: 300px; /* Typical thermal printer width */
+                margin: 0;
+                border: none;
+                box-shadow: none;
+                font-family: 'Courier New', Courier, monospace;
+            }
+            .non-printable {
+                display: none;
+            }
+        }
+    </style>
+</head> 
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
 
     <!-- Ecrã de Login -->
@@ -65,49 +97,58 @@
             <div class="p-4 sm:p-6 md:p-8">
                 <div id="content-dashboard" class="tab-content"></div>
                 <div id="content-cash-register" class="tab-content hidden">
-                    <div id="cash-register-closed-state" class="text-center py-12 hidden">
-                         <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="mx-auto text-red-500"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 9.9-1"></path></svg>
-                        <h2 class="mt-4 text-2xl font-bold text-gray-800">Caixa Fechado</h2>
-                        <form id="open-day-form" class="mt-6 max-w-sm mx-auto space-y-4">
-                            <div>
-                                <label for="initial-cash" class="block text-sm font-medium text-gray-700">Valor Inicial (Fundo de Troco do Dia)</label>
-                                <input type="number" id="initial-cash" placeholder="Ex: 100.00" step="0.01" min="0" required class="mt-1 block w-full p-2 border rounded-md shadow-sm">
+                <!-- Estado: Caixa Fechado (Nenhum dia aberto) -->
+                <div id="cash-register-closed-state" class="text-center py-10">
+                    <h3 class="text-xl font-bold text-gray-700">O caixa está fechado.</h3>
+                    <p class="text-gray-500 mt-2">Para começar, abra um novo dia de operações.</p>
+                    <form id="open-day-form" class="mt-6 max-w-sm mx-auto bg-white p-6 rounded-lg shadow">
+                        <div class="mb-4">
+                            <label for="initial-cash" class="block text-sm font-medium text-gray-700">Fundo de Troco Inicial (R$)</label>
+                            <input type="number" id="initial-cash" value="100.00" step="0.01" required class="mt-1 block w-full p-2 border rounded-md">
+                        </div>
+                        <div class="mb-4">
+                            <label for="opening-user" class="block text-sm font-medium text-gray-700">Operador de Abertura</label>
+                            <select id="opening-user" required class="mt-1 block w-full p-2 border rounded-md"></select>
+                        </div>
+                        <button type="submit" class="w-full bg-blue-600 text-white font-bold py-2 rounded-lg">Abrir Dia</button>
+                    </form>
+                </div>
+
+                <!-- Estado: Turno Ativo -->
+                <div id="cash-register-active-shift-state" class="hidden">
+                    <h3 class="text-xl font-bold text-gray-700">Turno em Andamento</h3>
+                    <div class="mt-4 bg-white p-6 rounded-lg shadow grid grid-cols-2 gap-4">
+                        <p><strong>Início do Turno:</strong> <span id="session-start-time"></span></p>
+                        <p><strong>Aberto por:</strong> <span id="session-opened-by"></span></p>
+                    </div>
+                    <div class="mt-6">
+                        <h4 class="font-semibold">Fechar o Turno Atual</h4>
+                        <form id="close-shift-form" class="mt-2 max-w-sm bg-white p-6 rounded-lg shadow">
+                            <div class="mb-4">
+                                <label for="closing-user" class="block text-sm font-medium text-gray-700">Operador de Fechamento</label>
+                                <select id="closing-user" required class="mt-1 block w-full p-2 border rounded-md"></select>
                             </div>
-                            <div>
-                                <label for="opening-user" class="block text-sm font-medium text-gray-700">Operador do 1º Turno</label>
-                                <select id="opening-user" required class="mt-1 block w-full p-2 border rounded-md shadow-sm"></select>
-                            </div>
-                            <button type="submit" class="w-full bg-green-600 text-white font-bold py-3 px-8 rounded-lg">Abrir Caixa (Iniciar Dia)</button>
+                            <button id="close-shift-button" type="button" class="w-full bg-yellow-500 text-white font-bold py-2 rounded-lg">Fechar Turno</button>
                         </form>
                     </div>
-                    <div id="cash-register-active-shift-state" class="text-center py-12 hidden">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="mx-auto text-green-500"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 5-5 5 5 0 0 1 5 5v4"></path></svg>
-                        <h2 class="mt-4 text-2xl font-bold text-gray-800">Turno Ativo</h2>
-                        <div class="mt-4 text-gray-600 space-y-2">
-                            <p>Início do Turno: <span id="session-start-time" class="font-semibold"></span></p>
-                            <p>Operador do Turno: <span id="session-opened-by" class="font-semibold"></span></p>
+                </div>
+
+                <!-- Estado: Dia Aberto, Aguardando Turno -->
+                <div id="cash-register-waiting-shift-state" class="hidden text-center py-10">
+                    <h3 class="text-xl font-bold text-gray-700">Dia Aberto. Aguardando novo turno.</h3>
+                    <p class="text-gray-500 mt-2">O turno anterior foi fechado. Abra um novo para continuar as vendas.</p>
+                    <form id="open-shift-form" class="mt-6 max-w-sm mx-auto bg-white p-6 rounded-lg shadow">
+                        <div class="mb-4">
+                            <label for="next-opening-user" class="block text-sm font-medium text-gray-700">Operador</label>
+                            <select id="next-opening-user" required class="mt-1 block w-full p-2 border rounded-md"></select>
                         </div>
-                        <div class="mt-8 max-w-sm mx-auto">
-                             <label for="closing-user" class="block text-sm font-medium text-gray-700">Operador de Fechamento</label>
-                             <select id="closing-user" required class="mt-1 block w-full p-2 border rounded-md shadow-sm"></select>
-                             <button id="close-shift-button" class="mt-4 w-full bg-yellow-500 text-white font-bold py-3 px-8 rounded-lg">Fechar Turno</button>
-                        </div>
+                        <button type="submit" class="w-full bg-blue-600 text-white font-bold py-2 rounded-lg">Iniciar Novo Turno</button>
+                    </form>
+                    <div class="mt-8 border-t pt-6">
+                        <h4 class="font-semibold">Ou feche o dia de operações:</h4>
+                        <button id="close-day-button" class="mt-4 bg-red-600 text-white font-bold py-2 px-6 rounded-lg">Fechar Dia</button>
                     </div>
-                    <div id="cash-register-waiting-shift-state" class="text-center py-12 hidden">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="mx-auto text-blue-500"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"></path><path d="M12 6v6l4 2"></path></svg>
-                        <h2 class="mt-4 text-2xl font-bold text-gray-800">Dia em Operação (Aguardando Turno)</h2>
-                        <div class="mt-6 max-w-sm mx-auto space-y-4">
-                            <form id="open-shift-form" class="space-y-4 p-4 border rounded-lg">
-                                 <h3 class="font-semibold">Iniciar Próximo Turno</h3>
-                                 <div>
-                                    <label for="next-opening-user" class="block text-sm font-medium text-gray-700">Operador</label>
-                                    <select id="next-opening-user" required class="mt-1 block w-full p-2 border rounded-md shadow-sm"></select>
-                                 </div>
-                                 <button type="submit" class="w-full bg-green-600 text-white font-bold py-3 px-8 rounded-lg">Abrir Novo Turno</button>
-                            </form>
-                            <button id="close-day-button" class="w-full bg-red-600 text-white font-bold py-3 px-8 rounded-lg">Fechar Dia e Gerar Relatório Final</button>
-                        </div>
-                    </div>
+                </div>
                 </div>
                 <div id="content-pdv" class="tab-content hidden"></div>
                 <div id="content-inventory" class="tab-content hidden"></div>
@@ -240,6 +281,37 @@
             <div class="bg-gray-100 p-4 flex justify-end">
                 <button onclick="closeDebtPaymentModal()" type="button" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-md mr-2">Cancelar</button>
                 <button id="confirm-debt-payment-button" type="button" class="bg-green-600 text-white px-6 py-2 rounded-md hover:bg-green-700">Confirmar Recebimento</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Receipt Modal -->
+    <div id="receipt-modal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center hidden z-50 p-4">
+        <div id="receipt-content" class="bg-white rounded-lg shadow-xl w-full max-w-sm transform transition-all scale-95">
+            <div class="p-6 text-center">
+                <h3 class="text-2xl font-bold text-gray-900">Top de Linha</h3>
+                <p class="text-sm text-gray-500">Rua Fictícia, 123 - Bairro Imaginário</p>
+                <p class="text-sm text-gray-500">CNPJ: 12.345.678/0001-99</p>
+                <div class="my-4 border-t border-dashed"></div>
+                <p class="text-left text-xs text-gray-600">Data: <span id="receipt-date"></span></p>
+                <p class="text-left text-xs text-gray-600">Venda: #<span id="receipt-sale-id"></span> | Turno: #<span id="receipt-shift-id"></span></p>
+                <p class="text-left text-xs text-gray-600">Cliente: <span id="receipt-customer"></span></p>
+                <div class="my-4 border-t border-dashed"></div>
+                <div id="receipt-items" class="text-left text-sm space-y-1">
+                    <!-- Items will be injected here -->
+                </div>
+                <div class="my-4 border-t border-dashed"></div>
+                <div class="text-right space-y-1">
+                    <p class="font-semibold">Total: <span id="receipt-total"></span></p>
+                    <div id="receipt-payments"></div>
+                    <p class="font-semibold">Troco: <span id="receipt-change"></span></p>
+                </div>
+                <div class="my-4 border-t border-dashed"></div>
+                <p class="text-xs text-gray-500">Obrigado pela sua preferência!</p>
+            </div>
+            <div class="bg-gray-100 p-4 flex justify-end space-x-2 non-printable">
+                <button id="close-receipt-button" type="button" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-md">Fechar</button>
+                <button id="print-receipt-button" type="button" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700">Imprimir</button>
             </div>
         </div>
     </div>
