--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Caixa e Estoque v11.4 (Login Final Corrigido)</title>
+    <title>Mercado Top De Linha</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
@@ -295,7 +295,7 @@
                 <div class="my-4 border-t border-dashed"></div>
                 <p class="text-left text-xs text-gray-600">Data: <span id="receipt-date"></span></p>
                 <p class="text-left text-xs text-gray-600">Venda: #<span id="receipt-sale-id"></span> | Turno: #<span id="receipt-shift-id"></span></p>
-                <p class="text-left text-xs text-gray-600">Cliente: <span id="receipt-customer"></span></p>
+                <p class="text-left text-xs text-gray-600">Via <span id="receipt-customer"></span></p>
                 <div class="my-4 border-t border-dashed"></div>
                 <div id="receipt-items" class="text-left text-sm space-y-1">
                     <!-- Items will be injected here -->
@@ -308,6 +308,7 @@
                 </div>
                 <div class="my-4 border-t border-dashed"></div>
                 <p class="text-xs text-gray-500">Obrigado pela sua preferência!</p>
+                <p class="text-xs text-gray-400 mt-2">Sistema TopDeLinha por HalDev sistemas</p>
             </div>
             <div class="bg-gray-100 p-4 flex justify-end space-x-2 non-printable">
                 <button id="close-receipt-button" type="button" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-md">Fechar</button>
