feat: unificar importações do Firebase e lógica principal no script.js

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <button onclick="changeTab('inventory')" id="tab-inventory" class="tab-button">Estoque</button>
                 <button onclick="changeTab('customers')" id="tab-customers" class="tab-button">Clientes & Fiado</button>
                 <button onclick="changeTab('reports')" id="tab-reports" class="tab-button">Relatórios</button>
+                <button onclick="changeTab('activities')" id="tab-activities" class="tab-button">Atividades</button>
             </nav>
         </div>
 
@@ -154,6 +155,7 @@
                 <div id="content-inventory" class="tab-content hidden"></div>
                 <div id="content-customers" class="tab-content hidden"></div>
                 <div id="content-reports" class="tab-content hidden"></div>
+                <div id="content-activities" class="tab-content hidden"></div>
             </div>
         </main>
     </div>
