feat: adicionar aba de configurações com gerenciamento de informações da empresa e operadores

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 <button onclick="changeTab('customers')" id="tab-customers" class="tab-button">Clientes & Fiado</button>
                 <button onclick="changeTab('reports')" id="tab-reports" class="tab-button">Relatórios</button>
                 <button onclick="changeTab('activities')" id="tab-activities" class="tab-button">Atividades</button>
+                <button onclick="changeTab('settings')" id="tab-settings" class="tab-button">Configurações</button>
             </nav>
         </div>
 
@@ -156,6 +157,47 @@
                 <div id="content-customers" class="tab-content hidden"></div>
                 <div id="content-reports" class="tab-content hidden"></div>
                 <div id="content-activities" class="tab-content hidden"></div>
+                <div id="content-settings" class="tab-content hidden">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                        <!-- Coluna de Informações da Empresa -->
+                        <div>
+                            <h3 class="font-semibold text-xl text-gray-700 mb-4">Informações da Empresa</h3>
+                            <form id="company-info-form" class="space-y-4 bg-white p-6 rounded-lg shadow">
+                                <div>
+                                    <label for="store-name" class="block text-sm font-medium text-gray-700">Nome da Loja</label>
+                                    <input type="text" id="store-name" class="mt-1 block w-full p-2 border rounded-md">
+                                </div>
+                                <div>
+                                    <label for="store-address" class="block text-sm font-medium text-gray-700">Endereço</label>
+                                    <input type="text" id="store-address" class="mt-1 block w-full p-2 border rounded-md">
+                                </div>
+                                <div>
+                                    <label for="store-cnpj" class="block text-sm font-medium text-gray-700">CNPJ / Documento</label>
+                                    <input type="text" id="store-cnpj" class="mt-1 block w-full p-2 border rounded-md">
+                                </div>
+                                <div>
+                                    <label for="store-receipt-message" class="block text-sm font-medium text-gray-700">Mensagem no Recibo</label>
+                                    <input type="text" id="store-receipt-message" class="mt-1 block w-full p-2 border rounded-md">
+                                </div>
+                                <button type="submit" class="w-full bg-blue-600 text-white font-bold py-2 rounded-lg hover:bg-blue-700">Salvar Informações</button>
+                            </form>
+                        </div>
+
+                        <!-- Coluna de Gestão de Operadores -->
+                        <div>
+                            <h3 class="font-semibold text-xl text-gray-700 mb-4">Gestão de Operadores</h3>
+                            <div class="bg-white p-6 rounded-lg shadow">
+                                <form id="add-operator-form" class="flex items-center gap-2 mb-4">
+                                    <input type="text" id="new-operator-name" placeholder="Nome do novo operador" required class="flex-grow p-2 border rounded-md">
+                                    <button type="submit" class="bg-green-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-700">Adicionar</button>
+                                </form>
+                                <div id="operators-list" class="space-y-2">
+                                    <!-- Lista de operadores será renderizada aqui -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
@@ -291,9 +333,9 @@
     <div id="receipt-modal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center hidden z-50 p-4">
         <div id="receipt-content" class="bg-white rounded-lg shadow-xl w-full max-w-sm transform transition-all scale-95">
             <div class="p-6 text-center">
-                <h3 class="text-2xl font-bold text-gray-900">Top de Linha</h3>
-                <p class="text-sm text-gray-500">Rua Fictícia, 123 - Bairro Imaginário</p>
-                <p class="text-sm text-gray-500">CNPJ: 12.345.678/0001-99</p>
+                <h3 id="receipt-store-name" class="text-2xl font-bold text-gray-900">Top de Linha</h3>
+                <p id="receipt-store-address" class="text-sm text-gray-500">Rua Fictícia, 123 - Bairro Imaginário</p>
+                <p id="receipt-store-cnpj" class="text-sm text-gray-500">CNPJ: 12.345.678/0001-99</p>
                 <div class="my-4 border-t border-dashed"></div>
                 <p class="text-left text-xs text-gray-600">Data: <span id="receipt-date"></span></p>
                 <p class="text-left text-xs text-gray-600">Venda: #<span id="receipt-sale-id"></span> | Turno: #<span id="receipt-shift-id"></span></p>
@@ -309,12 +351,15 @@
                     <p class="font-semibold">Troco: <span id="receipt-change"></span></p>
                 </div>
                 <div class="my-4 border-t border-dashed"></div>
-                <p class="text-xs text-gray-500">Obrigado pela sua preferência!</p>
+                <p id="receipt-store-message" class="text-xs text-gray-500">Obrigado pela sua preferência!</p>
                 <p class="text-xs text-gray-400 mt-2">Sistema TopDeLinha por HalDev sistemas</p>
             </div>
-            <div class="bg-gray-100 p-4 flex justify-end space-x-2 non-printable">
-                <button id="close-receipt-button" type="button" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-md">Fechar</button>
-                <button id="print-receipt-button" type="button" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700">Imprimir</button>
+            <div class="bg-gray-100 p-4 flex justify-between items-center non-printable">
+                <button id="open-drawer-button" type="button" class="bg-gray-600 text-white px-4 py-2 rounded-md hover:bg-gray-700">Abrir Gaveta</button>
+                <div class="space-x-2">
+                    <button id="close-receipt-button" type="button" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-md">Fechar</button>
+                    <button id="print-receipt-button" type="button" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700">Imprimir</button>
+                </div>
             </div>
         </div>
     </div>
