--- a/index.html
+++ b/index.html
@@ -6,33 +6,65 @@
     <title>Mercado Top De Linha</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css">
     <style>
         @media print {
-            body > *:not(#receipt-modal) {
-                display: none;
+            @page {
+                size: 48mm auto; /* TENTATIVA FINAL: Força o tamanho do papel */
+                margin: 0;
             }
-            #receipt-modal {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                display: block;
-                background-color: white;
+
+            body, html {
+                margin: 0;
                 padding: 0;
+                background: white;
             }
-            .non-printable {
+
+            body > *:not(#receipt-modal) {
                 display: none !important;
             }
-            #receipt-content {
-                width: 300px;
-                margin: 0 auto;
-                border: none;
-                box-shadow: none;
-                font-family: 'Courier New', Courier, monospace;
+
+            #receipt-modal {
+                width: 100%; /* Ocupa 100% do @page, que é 48mm */
+                position: static !important;
+                padding: 1.5mm !important;
+                box-sizing: border-box !important;
+            }
+
+            #receipt-content,
+            #receipt-content > div {
+                width: 100% !important;
+                max-width: 100% !important;
+                padding: 0 !important;
+                margin: 0 !important;
+                box-shadow: none !important;
+                border: none !important;
+                background: none !important;
+            }
+
+            #receipt-content * {
+                text-align: left !important;
+                font-family: 'Courier New', Courier, monospace !important;
+                font-size: 9pt !important;
+                color: black !important;
+                margin: 0;
+                padding: 0;
+                line-height: 1.3;
+            }
+            
+            #receipt-content p,
+            #receipt-content h3 {
+                margin-bottom: 4px !important;
+            }
+
+            #receipt-content .border-t {
+                border-top: 1px dashed black !important;
+                margin: 6px 0 !important;
+            }
+
+            .non-printable {
+                display: none !important;
             }
         }
     </style>
@@ -191,6 +223,20 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Seção de Downloads -->
+                        <div class="md:col-span-2">
+                            <h3 class="font-semibold text-xl text-gray-700 mb-4">Downloads</h3>
+                            <div class="bg-white p-6 rounded-lg shadow">
+                                <div class="flex items-center justify-between">
+                                    <div>
+                                        <p class="font-semibold">Servidor da Gaveta (Windows)</p>
+                                        <p class="text-sm text-gray-500">Necessário para a função "Abrir Gaveta" funcionar.</p>
+                                    </div>
+                                    <a href="#" id="download-drawer-server-link" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700" target="_blank" rel="noopener noreferrer">Baixar</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -254,13 +300,6 @@
                 <p id="modal-warning-message" class="text-sm"></p>
             </div>
             <button onclick="closeModal()" class="mt-6 bg-indigo-600 text-white px-4 py-2 rounded-lg">Fechar</button>
-        </div>
-    </div>
-    <div id="scanner-modal" class="fixed inset-0 bg-black bg-opacity-80 flex flex-col items-center justify-center hidden z-50 p-4">
-        <div class="bg-white rounded-lg shadow-xl w-full max-w-md p-4">
-            <h3 class="text-xl font-bold text-gray-900 mb-4">Aponte para o Código de Barras</h3>
-            <div id="reader" class="w-full rounded-md overflow-hidden"></div>
-            <button id="stop-scanner-button" class="mt-4 w-full bg-red-600 text-white font-bold py-3 rounded-lg hover:bg-red-700">Parar Scanner</button>
         </div>
     </div>
     <div id="edit-customer-modal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center hidden z-50 p-4">
