--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                         <p class="font-semibold">Servidor da Gaveta (Windows)</p>
                                         <p class="text-sm text-gray-500">Necessário para a função "Abrir Gaveta" funcionar.</p>
                                     </div>
-                                    <a href="#" id="download-drawer-server-link" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700" target="_blank" rel="noopener noreferrer">Baixar</a>
+                                    <a href="https://github.com/xSimHalx/TopDeLinha/releases/download/Server/drawer_server.exe" id="download-drawer-server-link" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700" target="_blank" rel="noopener noreferrer">Baixar</a>
                                 </div>
                             </div>
                         </div>
