feat: traduzir textos de botões para português

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <!-- Abas de Navegação -->
         <div class="border-b border-gray-200 flex-shrink-0">
             <nav class="flex -mb-px px-4 space-x-2 sm:space-x-4 overflow-x-auto" aria-label="Tabs">
-                <button onclick="changeTab('dashboard')" id="tab-dashboard" class="tab-button active">Dashboard</button>
+                <button onclick="changeTab('dashboard')" id="tab-dashboard" class="tab-button active">Painel</button>
                 <button onclick="changeTab('cash-register')" id="tab-cash-register" class="tab-button">Gestão de Caixa</button>
                 <button onclick="changeTab('pdv')" id="tab-pdv" class="tab-button" disabled>Frente de Caixa (PDV)</button>
                 <button onclick="changeTab('inventory')" id="tab-inventory" class="tab-button">Estoque</button>
@@ -277,7 +277,7 @@
                              <label for="payment-amount" class="block text-sm font-medium">Valor</label>
                             <input type="number" id="payment-amount" step="0.01" min="0.01" required class="mt-1 block w-full p-2 border-gray-300 rounded-md shadow-sm">
                         </div>
-                        <button type="submit" class="bg-blue-600 text-white p-2 rounded-md hover:bg-blue-700 h-10">Add</button>
+                        <button type="submit" class="bg-blue-600 text-white p-2 rounded-md hover:bg-blue-700 h-10">Adicionar</button>
                     </form>
                     <div id="payment-modal-payments-list" class="text-sm space-y-1"></div>
                     <div class="border-t pt-2 space-y-1 text-right">
