feat: adicionar área de aviso no recibo para itens com estoque baixo

--- a/index.html
+++ b/index.html
@@ -389,6 +389,9 @@
                 <p id="receipt-store-message" class="text-xs text-gray-500">Obrigado pela sua preferência!</p>
                 <p class="text-xs text-gray-400 mt-2">Sistema TopDeLinha por HalDev sistemas</p>
             </div>
+            <div id="receipt-warning-area" class="hidden p-4 text-sm text-red-700 bg-red-100 non-printable">
+                <p id="receipt-warning-message" class="font-semibold"></p>
+            </div>
             <div class="bg-gray-100 p-4 flex justify-between items-center non-printable">
                 <button id="open-drawer-button" type="button" class="bg-gray-600 text-white px-4 py-2 rounded-md hover:bg-gray-700">Abrir Gaveta</button>
                 <div class="space-x-2">
