feat: atualizar textos de descrição e rodapé no sistema de gestão

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <div class="bg-white p-6 rounded-lg shadow">
                                 <div class="flex items-center justify-between">
                                     <div>
-                                        <p class="font-semibold">Servidor da Gaveta (Windows)</p>
+                                        <p class="font-semibold">Programa para Abrir Gaveta Automática</p>
                                         <p class="text-sm text-gray-500">Necessário para a função "Abrir Gaveta" funcionar.</p>
                                     </div>
                                     <a href="https://github.com/xSimHalx/TopDeLinha/releases/download/Server/drawer_server.exe" id="download-drawer-server-link" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700" target="_blank" rel="noopener noreferrer">Baixar</a>
@@ -389,7 +389,7 @@
                 </div>
                 <div class="my-4 border-t border-dashed"></div>
                 <p id="receipt-store-message" class="text-xs text-gray-500">Obrigado pela sua preferência!</p>
-                <p class="text-xs text-gray-400 mt-2">Sistema TopDeLinha por HalDev sistemas</p>
+                <p class="text-xs text-gray-400 mt-2">Sistema de Gestão por SimHal Develop</p>
             </div>
             <div id="receipt-warning-area" class="hidden p-4 text-sm text-red-700 bg-red-100 non-printable">
                 <p id="receipt-warning-message" class="font-semibold"></p>
