feat: adicionar opção de pagamento "Fiado" no modal de pagamento e corrigir bugs relacionados à atualização de clientes

--- a/index.html
+++ b/index.html
@@ -268,11 +268,12 @@
                 </div>
                 <div class="bg-gray-50 p-4 rounded-lg space-y-4">
                     <h4 class="font-semibold text-lg">Pagamento</h4>
-                    <div id="payment-method-options" class="grid grid-cols-2 gap-2">
+                    <div id="payment-method-options" class="grid grid-cols-3 gap-2">
                         <button data-method="Dinheiro" class="payment-method-btn p-3 rounded-md">Dinheiro</button>
                         <button data-method="Cartão de Crédito" class="payment-method-btn p-3 rounded-md">Crédito</button>
                         <button data-method="Cartão de Débito" class="payment-method-btn p-3 rounded-md">Débito</button>
                         <button data-method="Pix" class="payment-method-btn p-3 rounded-md">Pix</button>
+                        <button data-method="Fiado" class="payment-method-btn p-3 rounded-md">Fiado</button>
                     </div>
                     <form id="add-payment-form" class="flex items-end gap-2">
                         <div class="flex-grow">
