--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <form id="open-day-form" class="mt-6 max-w-sm mx-auto bg-white p-6 rounded-lg shadow">
                         <div class="mb-4">
                             <label for="initial-cash" class="block text-sm font-medium text-gray-700">Fundo de Troco Inicial (R$)</label>
-                            <input type="number" id="initial-cash" value="100.00" step="0.01" required class="mt-1 block w-full p-2 border rounded-md">
+                            <input type="tel" id="initial-cash" value="R$ 100,00" placeholder="R$ 0,00" required class="mt-1 block w-full p-2 border rounded-md" autocomplete="off">
                         </div>
                         <div class="mb-4">
                             <label for="opening-user" class="block text-sm font-medium text-gray-700">Operador de Abertura</label>
